--- a/Application/Student/View/Public/header.html
+++ b/Application/Student/View/Public/header.html
@@ -7,10 +7,11 @@
 ================================================== -->
 <div class="navbar navbar-fixed-top">
     <div class="wrap">
-    
-       <a class="brand" title="{:C('WEB_SITE_TITLE')}" href="{:U('index/index')}">
-           <img height="52" src="__COMMON__/images/logo.png"/>
-       </a>
+
+        <a style="line-height: 50px" class="brand" title="{:C('WEB_SITE_TITLE')}" href="{:U('index/index')}">
+            <!--<img height="52" src="__COMMON__/images/logo.png"/>-->
+            LOGO
+        </a>
         <if condition="is_login()">
         	<div class="switch_mp">
             	<a href="#">{$public_info.public_name}<b class="pl_5 fa fa-sort-down"></b></a>
