--- a/Application/Teacher/View/Public/header.html
+++ b/Application/Teacher/View/Public/header.html
@@ -38,6 +38,11 @@
                     <li data-id="61" class="">
                         <a href="{:U('Periodical/index')}">期刊管理</a>
                     </li>
+                    <li data-id="61" class="">
+                        <a href="{:U('MsgCenter/index')}">
+                            消息中心<notempty name="notReadIndex">({$notReadIndex})</notempty>
+                        </a>
+                    </li>
                     <li class="dropdown admin_nav">
                         <a href="#" class="dropdown-toggle login-nav" data-toggle="dropdown" style="">
                             <notempty name="myinfo.headface_url">
