--- a/Application/Teacher/View/Auth/login.html
+++ b/Application/Teacher/View/Auth/login.html
@@ -6,12 +6,10 @@
     <div class="login_header">
 
         <div class="log_wrap">
-            <a href="/" title="乐摇"><img class="logo" src="__PUBLIC__/Common/images/logo.png"/></a>
-            <!--
-            <div class="nav_r">
-                第一次使用WeiPHP？<a href="{:U('User/register')}">立即注册</a>
-            </div>
-            -->
+            <a style="line-height: 50px" class="brand" title="{:C('WEB_SITE_TITLE')}" href="{:U('index/index')}">
+                <!--<img height="52" src="__COMMON__/images/logo.png"/>-->
+                LOGO
+            </a>
         </div>
 
     </div>
