--- a/Application/Student/View/Paper/add.html
+++ b/Application/Student/View/Paper/add.html
@@ -14,7 +14,7 @@
                                     修改{$info.name}的信息
                                     <input type="hidden" name="id" value="{$info.id}">
                                     <else/>
-                                    新增期刊
+                                    新增论文
                                 </notempty>
                                 </h3>
 
