--- a/Application/Student/View/Public/header.html
+++ b/Application/Student/View/Public/header.html
@@ -8,9 +8,8 @@
 <div class="navbar navbar-fixed-top">
     <div class="wrap">
 
-        <a style="line-height: 50px" class="brand" title="{:C('WEB_SITE_TITLE')}" href="{:U('index/index')}">
-            <!--<img height="52" src="__COMMON__/images/logo.png"/>-->
-            LOGO
+        <a class="brand" title="{:C('WEB_SITE_TITLE')}" href="{:U('index/index')}">
+            <img height="52" src="__COMMON__/images/logo.png"/>
         </a>
         <if condition="is_login()">
         	<div class="switch_mp">
