--- a/Public/Common/css/module.css
+++ b/Public/Common/css/module.css
@@ -54,6 +54,14 @@
 	background-color: #0c9dcc;
 	color: #fff;
 }
+.btn-danger {
+	background-color: #d9534f;
+	color: #fff;
+}
+.btn-danger:hover {
+	background-color: #c9302c;
+	color: #fff;
+}
 .submit-btn {
 	padding: 12px 50px;
 	font-size: 16px;
