--- a/Application/Teacher/View/Periodical/index.html
+++ b/Application/Teacher/View/Periodical/index.html
@@ -39,7 +39,7 @@
                         <tr>
                             <th class="row-selected row-selected"> <input type="checkbox" class="check-all regular-checkbox" id="checkAll">
                                 <label for="checkAll"></label></th>
-                            <th>期刊名</th>
+                            <th width="200">期刊名</th>
                             <th width="100">级别</th>
                             <th width="120">领域</th>
                             <th>网址</th>
