--- a/Application/Teacher/View/Student/add.html
+++ b/Application/Teacher/View/Student/add.html
@@ -72,7 +72,7 @@
                                 </div>
                             </div>
                             <div class="form-item cf toggle-public_name">
-                                <label class="item-label"> <span class="need_flag">*</span> 备注 <span class="check-tips">  </span></label>
+                                <label class="item-label">备注 <span class="check-tips">  </span></label>
                                 <div class="controls">
                                     <label class="textarea input-large">
                                         <textarea name="remark">{$info.remark}</textarea>
