--- a/Application/Student/View/Periodical/index.html
+++ b/Application/Student/View/Periodical/index.html
@@ -37,7 +37,7 @@
                         <thead>
                         <tr>
                             <th></th>
-                            <th>期刊名称</th>
+                            <th width="200">期刊名称</th>
                             <th width="100">级别</th>
                             <th width="120">领域</th>
                             <th>网址</th>
