--- a/Application/Teacher/View/Index/index.html
+++ b/Application/Teacher/View/Index/index.html
@@ -68,9 +68,18 @@
                     </table>
                 </div>
             </div>
-            <div class="" style="padding: 20px">
-                <h1>使用说明</h1>
+            <div class="" style="margin-left: 300px;overflow: auto">
+                <!--<h1>使用说明</h1>-->
+                <iframe id="docIframe" frameborder="0" scrolling="no" style="border: none;width: 100%" src="Public/Teacher/doc.html" width="100%" height="100%"></iframe>
             </div>
+            <script type="application/javascript">
+                $(function(){
+                    $("#docIframe").load(function(){
+                        var mainheight = $(this).contents().find("body").height()+30;
+                        $(this).height(mainheight);
+                    });
+                })
+            </script>
         </section>
     </div>
 
